Blender as pymodule segfault #77031

Closed
opened 2020-05-24 20:34:55 +02:00 by Dario Pellegrini · 3 comments

System Information
Operating system: ArchLinux
Graphics card: Intel Graphics, but likely irrelevant
Python version: 3.8

Blender Version
Broken: 2.82, 2.82a, trunk
Worked: ?

Short description of error
The testing command from the wiki produces a segfault. Possibly outdated wiki.

Exact steps for others to reproduce the error

  1. Compile and install blender as pymodule (eventually using AUR from ArchLinux)
  2. Run the test command from the wiki: python -c "import bpy ; bpy.ops.render.render(write_still=True)"
  3. The module loads correctly but the render segfault

Note
Behaviour confirmed also by the maintainer of the AUR package, see: https://aur.archlinux.org/packages/blender-as-py-module/

**System Information** Operating system: ArchLinux Graphics card: Intel Graphics, but likely irrelevant Python version: 3.8 **Blender Version** Broken: 2.82, 2.82a, trunk Worked: ? **Short description of error** The testing command from the [wiki ](https://wiki.blender.org/wiki/User:Sybren/BlenderAsPyModule) produces a segfault. Possibly outdated wiki. **Exact steps for others to reproduce the error** 1. Compile and install blender as pymodule (eventually using AUR from ArchLinux) 2. Run the test command from the wiki: `python -c "import bpy ; bpy.ops.render.render(write_still=True)"` 3. The module loads correctly but the render segfault **Note** Behaviour confirmed also by the maintainer of the AUR package, see: https://aur.archlinux.org/packages/blender-as-py-module/

Added subscriber: @DarioP

Added subscriber: @DarioP

This issue was referenced by c15bb3b55f

This issue was referenced by c15bb3b55faed1a8e5c9913553837539301fbe2e

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Campbell Barton self-assigned this 2020-05-25 07:55:24 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77031
No description provided.