Fix T77031: Blender as pymodule crashes when rendering

No longer enforce WITH_HEADLESS when building as a Python module
as it disables GPU access which is needed for rendering.